aire-con-gas-Chlacker/src/objects/Channel_Manager__c.object
<CustomObject>
    <fields>
        <fullName>Channel_ID__c</fullName>
        <description>Channel ID fo Slack</description>
        <label>Channel ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Ref_Column__c</fullName>
        <label>Object Ref Column</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Ref_ID__c</fullName>
        <description>Object ID for the object type being referenced</description>
        <label>Object Ref ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>Which object is referenced for the channel</description>
        <label>Object Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Channel Manager</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Channel Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>